-- AlterTable
ALTER TABLE "PosTransaction" ALTER COLUMN "paidAt" DROP NOT NULL,
ALTER COLUMN "paidAt" DROP DEFAULT;
